--- a/style.css
+++ b/style.css
@@ -39,14 +39,24 @@ h1 {
     
 }
 
+#footer-container {
+  position: relative;
+  height: 3em;
+  width: auto;
+  
+}
 .footer{
-    font-size: .7rem;
+    font-size: .6em;
+    color: #3d5c5c;
+    font-weight: 700;
     position: absolute;
     bottom: 0px;
-    width: 300px;
+    width: 400px;
     height: 40px;
     left: 50%;
     right: 25%;
     margin-left: -150px;
-
+    border-top: 2px solid #3d5c5c;
+    padding-top: 1em;
+    padding-left: 1.5em;
 }
